<resources>
    <string name="app_name">AndroidExpert</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_year">Year</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_rating">Rating</string>
    <string name="movie_description">Description</string>
    <string name="movie_duration">Duration</string>
    <string name="movie_image">Image</string>
    <string name="movie_banner">Banner</string>
    <string name="movie_synopsis">Synopsis</string>

    <array name="data_photo">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_venom</item>
    </array>

    <string-array name="data_title">
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bumblebee</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Dragon Ball Z: Broly - The Legendary Super Saiyan</item>
        <item>Glass</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Venom</item>
    </string-array>

    <string-array name="data_year">
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
        <item>2019</item>
        <item>1993</item>
        <item>2019</item>
        <item>2018</item>
        <item>2018</item>
        <item>2018</item>
    </string-array>

    <string-array name="data_genre">
        <item>Action,Adventure,Fantasy</item>
        <item>Adventure,Action,Sci-Fi</item>
        <item>Action,Adventure,Sci-Fi</item>
        <item>Comedy,Action</item>
        <item>Animation,Family,Adventure</item>
        <item>Animation,Adventure,Family,Sci-Fi</item>
        <item>Thriller,Drama,Sci-Fi</item>
        <item>Adventure,Action,Thriller</item>
        <item>Action,Adventure,Animation,Sci-Fi,Comedy</item>
        <item>Sci-Fi,Action</item>
    </string-array>

    <string-array name="data_description">
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder \'n zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\'s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>As Goku investigates the destruction of the Southern Galaxy, Vegeta is taken to be King of the New Planet Vegeta, and to destroy the Legendary Super Saiyan, Broly.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
    </string-array>

    <string-array name="data_rating">
        <item>6.8/10</item>
        <item>8.3/10</item>
        <item>6.5/10</item>
        <item>6.9/10</item>
        <item>7.7/10</item>
        <item>7.2/10</item>
        <item>6.5/10</item>
        <item>5.8/10</item>
        <item>8.4/10</item>
        <item>6.6/10</item>
    </string-array>

    <string-array name="data_duration">
        <item>144m</item>
        <item>149m</item>
        <item>114m</item>
        <item>117m</item>
        <item>104m</item>
        <item>70m</item>
        <item>129m</item>
        <item>116m</item>
        <item>117m</item>
        <item>112m</item>
    </string-array>

    <array name="data_banner">
        <item>@drawable/banner_aquaman</item>
        <item>@drawable/banner_avengerinfinity</item>
        <item>@drawable/banner_bumblebee</item>
        <item>@drawable/banner_deadpool</item>
        <item>@drawable/banner_dragon</item>
        <item>@drawable/banner_dragonball</item>
        <item>@drawable/banner_glass</item>
        <item>@drawable/banner_robinhood</item>
        <item>@drawable/banner_spiderman</item>
        <item>@drawable/banner_venom</item>
    </array>
</resources>
