<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="20dp">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/movie_image"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_photo">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:text="@string/movie_title"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/oval_background"
            android:paddingHorizontal="12dp"
            android:paddingVertical="5dp"
            android:text="@string/movie_genre"
            android:textColor="@color/colorText"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_genre"
            android:layout_marginStart="18dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:drawableStart="@drawable/ic_date_range_24dp"
                android:drawablePadding="6dp"
                android:text="@string/movie_year"
                android:textColor="@color/colorTextSecondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="★"
                android:textColor="@color/colorAccent"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0"
                android:text="@string/movie_rating"
                android:textColor="@color/colorTextSecondary"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>